--- a/consign-admin-api/src/main/resources/application-dev.yml
+++ b/consign-admin-api/src/main/resources/application-dev.yml
@@ -4,7 +4,7 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     driverClassName: com.mysql.cj.jdbc.Driver
     druid:
-      url: jdbc:mysql://106.15.39.147:3307/textile?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
+      url: jdbc:mysql://106.15.39.147:3307/consign_platform?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
       username: root
       password: (mysql)+mysql
       # 初始连接数
